@@ -148,6 +148,61 @@ SPARK_WORKER_MEMORY=1g  #配置worker的内存大小
 standalone.com
 ```
 
+### history server 配置
+- 配置 $SPARK_HOME/conf/spark-defaults.conf
+- 注意spark.eventLog.dir 和spark.history.fs.logDirectory 要相同路径
+
+```
+
+#
+# Licensed to the Apache Software Foundation (ASF) under one or more
+# contributor license agreements.  See the NOTICE file distributed with
+# this work for additional information regarding copyright ownership.
+# The ASF licenses this file to You under the Apache License, Version 2.0
+# (the "License"); you may not use this file except in compliance with
+# the License.  You may obtain a copy of the License at
+#
+#    http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+
+# Default system properties included when running spark-submit.
+# This is useful for setting default environmental settings.
+
+# Example:
+# spark.master                     spark://master:7077
+# spark.eventLog.enabled           true
+# spark.eventLog.dir               hdfs://namenode:8021/directory
+# spark.serializer                 org.apache.spark.serializer.KryoSerializer
+# spark.driver.memory              5g
+# spark.executor.extraJavaOptions  -XX:+PrintGCDetails -Dkey=value -Dnumbers="one two three"
+
+
+
+# history 
+spark.master=spark://standalone.com:7077
+spark.eventLog.enabled=true
+spark.eventLog.dir=hdfs://standalone.com:9000/spark/log/historyEventLog
+spark.serializer=org.apache.spark.serializer.KryoSerializer
+spark.driver.memory=1g
+spark.history.fs.logDirectory=hdfs://standalone.com:9000/spark/log/historyEventLog
+
+spark.history.ui.port=18080
+spark.history.fs.update.interval=10s
+#	The number of application UIs to retain. If this cap is exceeded, then the oldest applications will be removed.
+spark.history.retainedApplications=50
+spark.history.fs.cleaner.enabled=false
+spark.history.fs.cleaner.interval=1d
+spark.history.fs.cleaner.maxAge=7d
+spark.history.ui.acls.enable=false
+
+```
+
 
 ## master
 ### master启动命令
